--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,14 @@
     </header>
 
     <div class="grid-container">
-        <p>Email: contact@hotel.com</p>
-        <p>Phone: +1 234 567 890</p>
+        <p>Email: turjjoHalder@gmai.com</p>
+        <p>Phone: 2222589</p>
         <img src="img/front desk.jpg" alt="Front Desk">
         <img src="img/hotel entarance.jpg" alt="Hotel Entrance">
     </div>
     <footer>
         <div class="footer-content">
-            <p>&copy; <span id="year"></span> Independent Internation Hotel. All rights reserved.</p>
+            <p>&copy; <span id="year"></span> Turjjo Halder All rights reserved.</p>
         </div>
     </footer>
 
