--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <!-- This is comment -->
     <nav>
         <div class="nav-content">
           <div class="logo">
